<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundColor"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/normal_space"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/header"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:background="@color/ageTextBackGroundColor"
            android:padding="@dimen/small_space"
            android:text="@string/age"
            android:textColor="@color/ageTextColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:padding="@dimen/small_space"
            android:text="@string/in_minutes"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/datePickerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:background="@color/background_button_color"
            android:text="@string/select_date"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/text_label_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            tools:text="@string/date"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textColor="@color/selectedLabelTextColor"
            android:textSize="@dimen/text_label_size" />

        <TextView
            android:id="@+id/tvSelectedDateInMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            tools:text="@string/num_minutes"
            android:textColor="@color/textColor"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes_label"
            android:textColor="@color/selectedLabelTextColor"
            android:textSize="@dimen/text_label_size" />


    </LinearLayout>
</layout>